# vulca

./: .env.production.template  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  add-audio.sh  chatgpt-app-submission.json  cut-demo-b.sh  docker-compose.yml  finalize-demo-v3.sh  finalize-demo-v4.sh  make-video.sh  produce-demo.sh  pyproject.toml  start.bat  start.sh  verification-tools-v0.16.1.txt
.agents/plugins/: marketplace.json
.claude/: settings.json  settings.local.json
.claude/agents/: content-creator.md  contract-reviewer.md  design-reviewer.md  growth-strategist.md  product-analyst.md  vulca-architect.md  vulca-worker.md
.claude/hooks/: agent-tracker.sh  auto-format.sh  instinct-logger.sh  protect-files.sh  session-state-inject.sh  stop-team-suggest.sh  team-prompt-inject.sh  update-claude-md.sh
.claude/rules/: api-contract.md  design-system.md  pipeline-guard.md  proactive-triggers.md  team-discussion.md  testing-rules.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  new_tradition.yml
.github/workflows/: ci.yml  deploy-backend-cloudrun.yml  deploy-gcp.yml  digestion-cron.yml  init-production-data.yml  keepalive-supabase.yml  migrate-sessions.yml  publish-pypi.yml  review-context.yml  security.yml  upload-images-gcs.yml  validate-traditions.yml
.superpowers/sdd/: task-1-report.md  task-3-report.md  task-4-report.md  task-5-report.md
ACMMM2026-AgentLoop/paper/: audit_notes.md  main.bbl  main.blg  main.out  main.tex  references.bib
assets/: demo.cast
assets/demo/: phase1-review.html  phase15-compare.html  showcase.html
comfyui-vulca/: README.md  __init__.py  comfyui-manager-entry.json  conftest.py  nodes.py  pyproject.toml  test_nodes.py
demo_output/: tweet-draft.md  vulca-demo.cast
deploy/chatgpt-mcp/: Dockerfile  README.md  cloudbuild.yaml  cloudrun.env.example
docs/: INSTALL-RECIPE.md  agent-native-workflow.md  apple-silicon-mps-comfyui-guide.md  architecture-overview.md  custom-provider.md  design-system.md  local-provider-setup.md  retry-exception-map.md  tool-audit-report-mock.json  tool-audit-report-real.json  tools-readiness-matrix.md
docs/blog/: 2026-04-13-launch-post.md
docs/platform/: chatgpt-app-privacy-policy.md  chatgpt-app-resubmission-checklist.md  chatgpt-app-resubmission-evidence.md  chatgpt-app-screenshot-and-test-evidence.md  chatgpt-prompt-studio-preview.md  chatgpt-remote-mcp-prototype.md  google-gemini-provider-guide.md  (+7 more)
experiments/: ten_agents_e2e.py
huggingface-space/: README.md
openclaw-vulca/: SKILL.md
scripts/: _evfsam_common.py  aggregated_case_source_eval.py  audit_ppt_run2_17_motion_delivery.py  audit_ppt_run2_20_trace_effectiveness.py  audit_ppt_run2_23_selector_effectiveness.py  audit_ppt_run2_26_visual_module_quality.py  audit_ppt_run2_30_presentation_synthesis.py  audit_ppt_run2_32_spine_climax_repair.py  audit_ppt_run2_34_main_surface_visual_evidence.py  audit_ppt_run2_37_visual_quality.py  audit_ppt_run2_42_content_visual_asset_quality.py  audit_ppt_run2_44_dataflow_readiness.py  audit_ppt_run2_45_semantic_geometry_effectiveness.py  audit_ppt_run2_48_composition_grammar_effectiveness.py  audit_ppt_run2_63_narrative_proof_consumption_effectiveness.py  audit_ppt_run2_74_visual_quality_evaluation.py  audit_ppt_run2_76_visual_quality_evaluation.py  audit_ppt_run2_78_visual_quality_evaluation.py  audit_ppt_run2_80_visual_quality_evaluation.py  audit_ppt_run2_83_workflow_taxonomy_bias.py  audit_ppt_run2_86_visual_quality_evaluation.py  audit_ppt_run2_89_visual_quality_evaluation.py  audit_ppt_run2_91_visual_quality_evaluation.py  audit_ppt_run2_93_visual_quality_evaluation.py  build_customer_solution_pack_deck.mjs  build_customer_solution_pack_pdf.py  build_phase15_compare.py  build_phase1_review.py  build_post1_bieber_en.py  build_post2_trump_en.py  build_ppt_contact_sheet.py  build_ppt_full_skill_series_sheet.py  build_ppt_run2_17_motion_renderer_proof.py  build_ppt_run2_21_visual_decision_memory.py  build_ppt_run2_24_single_usecase_content_evidence.py  build_ppt_run2_35_visual_evidence_realism_workflow.py  build_ppt_run2_38_public_video_visual_direction_workflow.py  build_ppt_run2_43_visual_asset_semantics_workflow.py  build_ppt_run2_46_multimodal_composition_memory.py  build_ppt_run2_49_readability_content_density_renderer_repair.py  (+150 more)
tests/: conftest.py  test_aggregated_case_source_eval.py  test_alpha_export.py  test_archiver.py  test_artifact_analysis.py  test_artifact_v3.py  test_audit_fixes.py  test_backlog_manual_cases_v1.py  test_backward_compat.py  test_blend_pure.py  test_brief.py  test_case_review.py  test_chatgpt_prompt_studio.py  test_checkpoint.py  test_checkpoint_enhanced.py  test_cli.py  test_cli_commands.py  test_cli_create_output.py  test_cli_discouraged_warning.py  test_cli_eval_metadata.py  test_cli_layered_flags.py  test_cli_layers_cache.py  test_cli_layers_retry.py  test_cli_reference.py  test_cli_selective.py  test_cli_studio.py  test_cli_sync.py  test_combined_learning_sources_v1.py  test_composite_alpha.py  test_composite_node.py  test_composite_nondestructive.py  test_concept_phase.py  test_content_lock.py  test_create_hitl.py  test_critical_gaps.py  test_cultural_loader.py  test_customer_solution_pack_deck_script.py  test_data_expansion_backlog.py  test_decide_circuit_breaker.py  test_decompose_cases.py  (+269 more)
vulca/: .mcp.json  CHANGELOG.md  README.md  pyproject.toml
wenxin-backend/: .gitignore  Dockerfile.cloud  Dockerfile.dev  Dockerfile.init  README.md  migrate_sessions_to_db.py  pyproject.toml  requirements.cloudrun.txt  requirements.prototype.txt  requirements.render.txt  requirements.txt  seed_prototype.py  vulca
wenxin-moyun/: .env.example  .env.production  CLAUDE.md  README.md  eslint.config.js  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
(+2268 files in other folders)
