[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulca"
version = "0.12.0"
description = "AI-native cultural art creation organism. Multi-round img2img iteration, two-phase VLM evaluation (OBSERVE+EVALUATE), Brief-driven Studio with sketch/reference upload, local evolution flywheel, commercial extra dimensions, and 13 cultural traditions."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Yu Haorui", email = "yuhaorui48@gmail.com" },
]
keywords = ["ai", "art", "evaluation", "cultural", "vlm", "pipeline", "creation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "litellm>=1.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Minimal: evaluate + create (no heavy deps)
core = []

# Layer system: split, composite, export
layers = [
    "Pillow>=10.0",
    "cairosvg>=2.7",
    "numpy>=1.24",
]

# Algorithmic tools: cv2-based analysis
tools = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "Pillow>=10.0",
]

# SAM2 segmentation (optional, heavy)
sam = [
    "segment-anything-2>=0.1",
    "torch>=2.0",
    "numpy>=1.24",
    "Pillow>=10.0",
]

# SAM3 text-prompted segmentation (optional, heavy, GPU-only)
sam3 = [
    "transformers>=4.50",
    "torch>=2.0",
    "numpy>=1.24",
    "Pillow>=10.0",
]

# Background removal (optional)
rembg = [
    "rembg>=2.0",
]

# Scout: semantic search
scout = [
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.0",
]

# MCP server
mcp = [
    "fastmcp>=3.0",
]

# Full layer system with all optional extras
layers-full = [
    "Pillow>=10.0",
    "cairosvg>=2.7",
    "numpy>=1.24",
    "rembg>=2.0",
    "segment-anything-2>=0.1",
    "transformers>=4.50",
    "torch>=2.0",
]

# Full installation (layers + tools, excluding heavy ML deps)
all = [
    "vulca[layers,tools,mcp,scout]",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://vulcaart.art"
Documentation = "https://github.com/vulca-org/vulca"
Repository = "https://github.com/vulca-org/vulca"
Issues = "https://github.com/vulca-org/vulca/issues"

[project.scripts]
vulca = "vulca.cli:main"
vulca-mcp = "vulca.mcp_server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src/vulca"]

[tool.hatch.build]
artifacts = ["src/vulca/cultural/data/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
